# monoize

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  PROMPT.md  README.md  build.rs  deploy.sh  openai-images-generate-after-returns.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
mock/: mcp-stdio.ts  package.json  server.ts
scripts/: migrate-provider-ids.ts
sdk-tests/: .gitignore  README.md  ai-sdk-responses-sse-contract.ts  cache-passthrough-test.ts  index.ts  live-protocol-suite.ts  model-registry.json  openai-agent-tool-smoke.ts  openai-chat-smoke.ts  openai-smoke.ts  package.json  reasoning-matrix-test.ts
spec/: api-key-authentication.spec.md  api-key-model-redirects.spec.md  api-key-sub-account-billing.spec.md  api-token-management.spec.md  auto-cache-transforms.spec.md  channel-management.spec.md  dashboard-group-suggestions.spec.md  dashboard-home-overview.spec.md  dashboard-ui-layout.spec.md  database-configuration.spec.md  database-provider-routing.spec.md  db-performance-tuning.spec.md  deployment-watchdog.spec.md  frontend-design-system.spec.md  frontend-popup-motion.spec.md  frontend-typography.spec.md  frontend_delivery.spec.md  image-api-proxy.spec.md  initial-seaorm-migration.spec.md  metered-billing.spec.md  model-marketplace.spec.md  model-metadata-dashboard.spec.md  model-registry-storage.spec.md  monoize-upstream-routing.spec.md  openai-image-upstream.spec.md  playground.spec.md  real-upstream-matrix-observability.spec.md  replicate-upstream.spec.md  request-capture-dumps.spec.md  request-logs.spec.md  (+8 more)
src/: app.rs  auth.rs  (+23 more)
(+267 files in other folders)
